# C-tasks-

task1/: CMakeLists.txt  main.cpp
task10/: CMakeLists.txt  DijkstraAlgorithm.cpp  EnumerationAlgorithm.cpp  FastAlgorithm.cpp  main.cpp
task11/: CMakeLists.txt  main.cpp  t1.h
task2/: CMakeLists.txt  main.cpp
task3/: Makefile1  Makefile2  bye.cpp  hello.cpp  here.cpp  main.cpp  mylib.h
task4/: Build.cmd  CMakeLists.txt
task4/lib_rational/: lib_rational.cpp
task4/rational_poly/: rational_poly.cpp
task5/: CMakeLists.txt  Mstring.h  main.cpp
task6/: CMakeLists.txt  rTriple.cpp  rTriple.h
task7/: CMakeLists.txt  main.cpp  task.h
task8/: CMakeLists.txt  fst.h  fth.h  main.cpp  snd.h  trd.h
task9/: CMakeLists.txt  t1.h  t2.h  t3.h
